deploy/k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aman-api-svc
  namespace: aman
spec:
  selector:
    app: aman-api
  ports:
  - name: http
    port: 3000
    targetPort: 3000
